[package]
name = "Redio"
version = "0.1.0"
edition = "2021"
default-run = "rediodb"
description = "RedioDB: A high-performance, Redis-inspired distributed database prototype in Rust."

[lib]
name = "rediodb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.9", features = ["transport"] }
tokio = { version = "1", features = ["full", "macros"] }
rocksdb = "0.17.0"
rdkafka = { version = "0.29.0", features = ["tokio"] }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
prometheus = "0.13.4"
futures-core = "0.3"
futures-util = "0.3"
rustyline = "12.0.0" # or the latest version

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "rediodb"
path = "src/main.rs"

[[bin]]
name = "rediodb-cli"
path = "src/cli.rs"

[build]
rustflags = ["-C", "linker=gcc"]
